force-app/main/default/objects/SFGA__Text_Ad__c/SFGA__Text_Ad__c.object-meta.xml
<CustomObject>
    <description>Text Ads are the advertising copy that displays on the search results page</description>
    <label>Text Ad</label>
    <nameField>
        <label>Text Ad Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Text Ads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>