force-app/main/default/objects/SFGA__Text_Ad__c/fields/SFGA__Text_Ad_Description_1__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Text_Ad_Description_1__c</fullName>
    <label>Text Ad Description 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>