force-app/main/default/objects/SFGA__Text_Ad__c/fields/SFGA__Text_Ad_Description_2__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Text_Ad_Description_2__c</fullName>
    <label>Text Ad Description 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>