force-app/main/default/objects/SFGA__Text_Ad__c/fields/SFGA__Text_Ad_Destination_URL__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Text_Ad_Destination_URL__c</fullName>
    <label>Text Ad Destination URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>