force-app/main/default/objects/SFGA__Text_Ad__c/fields/SFGA__Text_Ad_ID__c.field-meta.xml
<CustomField>
    <fullName>SFGA__Text_Ad_ID__c</fullName>
    <description>Unique Identifier of the Text Ad</description>
    <label>Text Ad ID</label>
    <length>60</length>
    <type>Text</type>
</CustomField>